# Puddles-Legacy

./: .clang-uml  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  USAR-VCPKG-SIN-ADMIN.txt  _config.yml  enable-vcpkg-without-admin.bat  index.html  index.md  script.js  style.css  vcpkg.json
.github/workflows/: create_release.yml
.linux-test/: config.xml  save_game.xml
.linux-test/lib/: libSDL2-2.0d.so.0  libSDL2_image-2.0d.so.0  libSDL2_image-2.0d.so.0.800.2  libSDL2_mixer-2.0d.so.0  libSDL2_mixer-2.0d.so.0.800.0  libSDL2_ttf-2.0d.so.0  libSDL2_ttf-2.0d.so.0.2200.0  libblkid.so.1.1.0  libbrotlicommon.so.1.1.0  libbrotlidec.so.1.1.0  libbz2d.so.1.0.8  libcap.so.2  libcap.so.2.68  libcrypt.so.1.1.0  libdbus-1.so.3.38.0  libexpat.so.1  libexpat.so.1.9.0  libfreetyped.so.6  libfreetyped.so.6.20.1  liblzma.so.5.4.4  libmount.so.1.1.0  libogg.so.0.8.5  libpng16d.so.16  libpng16d.so.16.43.0  libpsx.so.2  libpsx.so.2.68  libpugixml.so.1.14  libsystemd.so.0.37.0  libvorbis.so.0.4.9  libvorbisenc.so.2.0.12  libvorbisfile.so.3.3.8  libz.so.1.3.1  libzstd.so.1.5.5
_layouts/: default.html
docs/diagrams/: uml-diagram.puml
include/: Animation.h  App.h  Checkpoint.h  DogEnemy.h  DynArray.h  FadeToBlack.h  FoodItem.h  FurBall.h  GuiControl.h  Map.h  Module.h  OwlEnemy.h  PerfTimer.h  Physics.h  Player.h  Render.h  RopeEntity.h  SString.h  ScoreItem.h  Timer.h
include/Core/: Animation.h  AnimationManager.h  App.h  Audio.h  DebugUI.h  DialogManager.h  EntityManager.h  FadeToBlack.h  GuiControl.h  GuiControlButton.h  GuiControlCheckbox.h  GuiControlDropDownBox.h  GuiControlLabel.h  GuiControlPopUp.h  GuiControlSlider.h  GuiManager.h  Input.h  Lighting.h  Map.h  Module.h  ParticleManager.h  Pathfinding.h  Physics.h  QuestManager.h  Render.h  SceneManager.h  Textures.h  UI.h  VideoPlayer.h  Window.h
include/Gameplay/: Credits.h  FinalScene.h  Intro.h  (+11 more)
src/: App.cpp  Audio.cpp  Checkpoint.cpp  DogEnemy.cpp  EntityManager.cpp  FadeToBlack.cpp  FinalScene.cpp  FoodItem.cpp  FurBall.cpp  Input.cpp  Log.cpp  Main.cpp  MainMenu.cpp  Map.cpp  OwlEnemy.cpp  PerfTimer.cpp  Physics.cpp  Player.cpp  Render.cpp  RopeEntity.cpp  Scene.cpp  ScoreItem.cpp  Textures.cpp  Timer.cpp  Window.cpp
(+304 files in other folders)
